# new_york_experiments

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
examples/: migrate_data.rs  migrate_data_2.rs  neat_app.rs  neat_score.rs  neat_score_back.rs  neat_score_back_lag.rs  update_nearest.rs  update_nearest_2.rs
src/: activation.rs  buffer.rs  cleanup_results.rs  create_applicant.rs  file.rs  find_appropriate.rs  get_high_fitness.rs  get_keys_for_interval.rs  get_now.rs  get_result.rs  get_result_float.rs  get_result_matrix.rs  get_result_steps.rs  get_result_steps_iterate.rs  get_result_steps_iterate_back.rs  get_score_fitness.rs  get_wallet_fitness.rs  hash_md5.rs  lib.rs  load_networks.rs  mae.rs  neat_network_applicant_type.rs  neat_network_applicants.rs  neat_score_applicant.rs  on_add_network.rs  parse.rs  save_network.rs  save_parse_network.rs  save_parse_network_applicant.rs  save_parse_network_result.rs
