[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
log = "0.4"
dotenv = "0.15"
futures = "0.3"
env_logger = "0.9"
serde_cbor = "0.11"
serde_json = "1.0"
new_york_utils = "0.1"
vivalaakam_neat_rs = "0.1"
new_york_calculate_core = "0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json", "any"] }
clap = { version = "3.2.15", features = ["derive"] }
